<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MagicActivity">

    <TextView
        android:id="@+id/magicUserTv"
        android:layout_width="389dp"
        android:layout_height="78dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/magicUserDefault"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/purple_700"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/magicHiBPMBtn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/warning_high_bpm_detected"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#FF5722"
        app:layout_constraintTop_toBottomOf="@+id/magicUserTv"
        tools:layout_editor_absoluteX="0dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/magicHeartRateIv"
        android:layout_width="419dp"
        android:layout_height="328dp"
        android:gravity="center"
        android:src="@mipmap/good"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magicHiBPMBtn"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/magicOverrideBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/magicHeartRateIv"
        android:text="Override Button"
        />

    <TextView
        android:id="@+id/magicDataTv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/receiving_messages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/magicHeartRateIv"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>